# chris_ai_test

./: .env_example  .gitignore  Dockerfile  complete_end_to_end_test.py  create_test_pdf.py  debug_cross_page_associations.py  debug_document_processing.py  debug_page_9_pymupdf.py  debug_paragraph_102.py  docker-compose.yml  enhanced_pdf_parser.py  pure_markdown_test.py  pyproject.toml  pytest.ini  quick_test.py  requirements.txt  requirements_cleaned.txt  simple_test.py  test_accuracy_validation.py  test_association_analysis_focused.py  test_candidate_ranking.py  test_caption_priority_enhancement.py  test_complete_workflow.py  test_comprehensive_improvements.py  test_core_functionality.py  test_document_type_detection.py  test_enhanced_spatial_analysis.py  test_fix_validation.py  test_knowledge_base_simple.py  test_layout_detection.py  test_metadata_path.py  test_output_simple.md  test_performance_benchmark.py  test_performance_benchmarks.py  test_production_entry_simple.py  圖文關聯問題_完整分析與修正方案.md  圖文關聯錯位問題分析與解決方案.md  完整測試解決方案總結報告.md  智能文件轉換與RAG系統_完整運行流程圖表.md  智能文檔轉換系統_最新分析與TODO清單.md  (+8 more)
.cursor/rules/: project-rules-01.mdc
data/output/: Workflows-sample_20250810_022226.md  Workflows-sample_20250810_022300.md  production_entry_test_report.md  test_report.md  workflows_sample_complete.md
docs/api/: quick_start.md
docs/technical_specs/: association_algorithm.md
output/: Workflows-sample_20250809_223716.md  Workflows-sample_20250809_223808.md  Workflows-sample_20250809_223820.md  Workflows-sample_20250812_010505.md  Workflows-sample_20250812_010555.md  Workflows-sample_20250812_011645.md  Workflows-sample_20250812_011754.md  Workflows-sample_20250812_011837.md  Workflows-sample_20250812_011919.md  association_analysis_test_report.md
scripts/: migrate_metadata.py  rename_images.py  run_tests.py
src/: __init__.py  main.py
src/api/: __init__.py  app.py  main.py
src/api/middleware/: __init__.py  auth.py  error_handler.py  rate_limit.py
src/api/models/: __init__.py  request_models.py  response_models.py
src/api/routes/: __init__.py  chat.py  download.py  embeddings.py  process.py  status.py  upload.py
src/association/: __init__.py  allen_logic.py  association_optimizer.py  association_scorer.py  cache_manager.py  candidate_ranker.py  caption_detector.py  semantic_analyzer.py  spatial_analyzer.py
src/config/: __init__.py  logging_config.py  settings.py
src/image_processing/: __init__.py  extractor.py  metadata.py  optimizer.py  storage.py
src/knowledge_base/: __init__.py  adapter_factory.py  azure_ai_search.py  base_adapter.py  copilot_studio.py  diffy_adapter.py
src/markdown/: __init__.py  formatter.py  generator.py
src/markdown/templates/: basic.md.j2  enhanced.md.j2
src/parsers/: __init__.py  base.py  parser_factory.py  pdf_parser.py  ppt_parser.py  word_parser.py
src/services/: __init__.py  azure_openai_service.py  document_service.py
src/utils/: __init__.py  error_handling.py  file_utils.py  image_utils.py  performance_benchmarks.py  text_utils.py  validation.py
test_output/: complete_system_test_report.md  complete_test_enhanced.md  complete_test_simple.md  final_verification_report.md  real_workflows_enhanced.md  real_workflows_simple.md
test_output/production_entry_test/: Workflows-sample_20250809_233906.md  Workflows-sample_20250809_234054.md
tests/: __init__.py  conftest.py  test_data_generator.py
tests/fixtures/documents/: sample.docx  sample.pptx
tests/fixtures/expected_outputs/: sample_output.md
tests/integration/: __init__.py  test_end_to_end.py  test_production_entry.py
tests/unit/: __init__.py
tests/unit/test_api/: __init__.py  test_chat_endpoints.py
tests/unit/test_association/: __init__.py  test_caption_detector.py  test_spatial_analyzer.py
tests/unit/test_parsers/: __init__.py  test_pdf_parser.py  test_word_parser.py
